<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PropSearchhw9</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search Your Property Here </string>
    <string name="addr">Address*:</string>
    <string name="enter_text">" Street Address"</string>
    <string name="cit">City*:</string>
    <string name="cit1">" City"</string>
    <string name="stat">State*:</string>
    <string name="stat1">Choose State</string>
    <string name="sea">Search</string>
    <string name="title_activity_result">Results From Zillow</string>
    <string name="states_prompt">Choose a State</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="facebook_app_id">656734024443826</string>

    <string-array name="states_array">
        <item>Choose State</item>
        <item>AK</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>MT</item>
        <item>NC</item>
        <item>ND</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_swap">Swap</string>
    <string name="title_activity_result_activity1">ResultActivity1</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_fragment_1">Fragment_1</string>
    <string name="title_activity_fragment_2">Fragment_2</string>
    <string name="title_activity_basicinfo">Basicinfo</string>
    <string name="title_activity_historicalzestimates">Historicalzestimates</string>

</resources>
